iphone gaps fix

--- a/src/styles/experience.component.scss
+++ b/src/styles/experience.component.scss
@@ -5,7 +5,7 @@
 
   display: flex;
   flex-direction: column-reverse;
-  gap: 5px;
+  //gap: 5px;
   font-size: 1rem;
   list-style: none;
   padding: 0;
@@ -16,6 +16,7 @@
     grid-auto-columns: auto;
     grid-template-columns: max-content 1fr 1fr;
     grid-template-rows: repeat(var(--months), auto);
+    gap: 5px;
   }
   @media print {
     display: flex;
@@ -30,6 +31,11 @@
     padding: 0.7em 1em;
     background-color: rgba(127, 127, 127, 0.1);
     border-radius: 3px;
+    margin-bottom: 5px;
+
+    @media (min-width: $phone_landscape) {
+      margin-bottom: 0;
+    }
 
     &.fix-start {
       grid-column-start: 2;
@@ -46,7 +52,7 @@
 
   .timeline {
     display: none;
-    @media (min-width: $phone_landscape ) {
+    @media (min-width: $phone_landscape) {
       display: block;
     }
     @media print {
